# rust.axum_crud_api

./: Cargo.toml  README.md
migrations/: 20230831201242_todo.sql
scripts/: prepare_database.sh  start_database.sh
src/: main.rs
src/config/: app_config.rs
src/controllers/: handlers.rs
src/errors/: app_errors.rs
src/models/: todo.rs
tests/: integration_tests.rs
