[package]
name = "axum_crud_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde_json = "1.0.105"
chrono = {version = "0.4.28", features = ["serde"]}
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "tls-native-tls", "time", "chrono" ]}
tokio = { version = "1.32.0", features = ["full"]}
serde = "1.0.188"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
